--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="film">
       <div class="film-text">
         <span class="film-date">16 сентября 2021</span>
-        <img src="/img/Venom 2.svg" alt="logo: venom-2" class="film-logo" />
+        <img src="img/Venom 2.svg" alt="logo: venom-2" class="film-logo" />
         <p class="film-description">В настырном журналисте по-прежнему живет симбиот. Том Харди в образе обаятельного суперзлодея из комиксов Marvel.</p>
       </div>
       <!-- /.film-text -->
